# Checkmate-Escrow

./: .editorconfig  .env.example  .gitignore  BOUNTY-fba-quorum-intersection.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  task1.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  formal-verification.yml  frontend-accessibility.yml
contracts/escrow/src/: errors.rs  formal_verification.rs  formal_verification_tests.rs  kani_harness.rs  lib.rs  tests.rs  types.rs
contracts/escrow/tests/: benchmarks.rs
contracts/oracle/src/: errors.rs  lib.rs  (+2 more)
docs/: CONTRIBUTING_ORACLE.md  architecture.md  deployment.md  error-codes.md  event-indexer-scaling.md  glossary.md  issue-831-albedo-test.md  issue-839-albedo-unit-tests.md  local-dev.md  match-lifecycle.md  oracle.md  roadmap.md  runbook-pause.md  runbook-rotation.md  security.md  wave-guide.md
frontend/: README.md  eslint.config.js  jest.config.js  lighthouserc.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
oracle-service/: Cargo.toml
oracle-service/src/: main.rs
oracle-service/tests/: lichess_client_unit.rs  load_tests.rs  pipeline_integration.rs
scripts/: check_api_refs.sh  check_links.sh  security-scan.sh  verify_contract.sh
services/event-indexer/: Cargo.toml  Dockerfile  README.md
services/event-indexer/src/: api.rs  cache.rs  config.rs  db.rs  leader.rs  lib.rs  main.rs  rpc.rs
services/event-indexer/tests/: integration_tests.rs
(+37 files in other folders)
